tests/NormalTests/paczka1/small_fuzzy/45597809.err
Error in line 1: Vxdt A130 19,6
Error in line 2: Vxdt A825 85,4
Error in line 10: 40r A825 67,2
